Fixed the height of the header in StackNode, to prevent jankiness when toggling content visibility

--- a/cocktail/ui/resources/styles/cocktail-ui-stacknode.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-stacknode.scss
@@ -110,7 +110,8 @@
 }
 
 #header {
-    flex: 0 0 7em;
+    flex: 0 0 auto;
+    height: 7em;
     display: flex;
     flex-direction: row;
     align-items: stretch;
